--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Aboreto:wght@300;400;500;600&display=swap");
 
 body {
   background-color: #ffffff;
   overflow-x: hidden;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "Aboreto", sans-serif;
 }
 
 .svg_main {
